src/scss/portfolio.scss
@use "mixins";
@use "variables";

.portfolio-grid-container {

    // Area above and to side of grid
    $grid-padding: min(30px, 3vw);

    width: 100%;
    margin: $grid-padding 0;
    padding: 0 $grid-padding;


    &[data-filters-product='wedding-cake'] {
        #portfolio-filters button#portfolio-filter-product {
            background: pink;
        }
    }
    &[data-filters-occasion='anniversary'] {
        #portfolio-filters button#portfolio-filter-occasion {
            background: pink;
        }
    }

    #portfolio-filters {
        display: grid;
        gap: 5px;
        width: 100%;
        max-width: 400px;
        margin: 0 auto;
        grid-template-columns: repeat(4, minmax(auto, 1fr));
        grid-template-rows: auto;

        button {
            background: none;
            border: none;
            color: #a4a2a2;
            border-radius: 5px;
            width: 100%;
            padding: 4px 5px;
            cursor: pointer;
            background: #0000;
            transition: color .2s;
            box-shadow: 0px 0px 3px 0px #0000003d;
            overflow: hidden;

            span {
                // Wrap all text
                width: min-content;
                display: block;
                margin: auto;
            }

            // Gradient background for selected button (also shown on hover)
            position: relative;
            &::before {
                content: "";
                position: absolute;
                top: 0;
                left: 0;
                right: 0;
                bottom: 0;
                background: var(--selectedBackground);
                opacity: 0;
                transition: opacity .2s;
                z-index: -1;
            }

            @include mixins.hover {
                color: #000;

                &::before {
                    opacity: 1;
                }
            }
            &:focus-visible {
                color: #000;

                &::before {
                    opacity: 1;
                }
            }
        }

        // Buttons larger on desktop
        @media (min-width: 700px) {
            max-width: 900px;
            gap: 10px;

            button {

                padding: 6px 10px;

                span {
                    // Stop forcing text wrapping
                    display: inline;
                }
            }
        }
    }

    // Selected abutton styles
    // This is the "All cakes" button
    #portfolio-filters button:not([data-product]) {
        --selectedBackground: linear-gradient(45deg, #f9bbb9, #ffe8e8);
    }
    &:not([data-filters-product]) {
        #portfolio-filters button:not([data-product]) {
            color: #000;

            &::before {
                opacity: 1;
            }
        }
    }
    // Iterate through product buttons
    @each $name in (celebration-cake, wedding-cake, cupcakes) {

        &[data-filters-product='#{$name}'] {
            #portfolio-filters button[data-product='#{$name}'] {

                color: #000;

                &::before {
                    opacity: 1;
                }
            }
        }
    }

    .portfolio-grid {

        // Margin below filters
        margin-top: $grid-padding;

        // Grid items use absolute positioning to create masonry layout
        position: relative;
        width: 100%;

        // Items will not be shown until grid script has run
        // This ensures the grid maintains a height of at least the device height
        // so that the page doesn't start with the footer at the top
        min-height: 100vh;

        .grid-item {

            // Scrit will set `top` and `left` values
            position: absolute;

            background: #ececec;

            // Remove button styles
            padding: 0;
            border: none;

            overflow: hidden;
            height: min-content;
            cursor: pointer;

            // Item fades in once grid has been set up
            opacity: 0;
            transition: opacity .3s;

            img {
                // Button will be set to correct aspect ratio for image
                width: 100%;
                height: 100%;

                // Rendering inline adds extra space below in Safari
                display: block;
  
                transition: transform .7s;

                // Image fades in once loaded
                opacity: 0;

                // Zoom slightly on hover
                @include mixins.hover {
                    transform: scale(1.2);
                }
                
                // Hover and load transitions
                transition: transform .7s, opacity .3s;
            }


            // Only show this item if it meets filters
            display: none;
            &.filtered {
                display: block;
            }
        }

        // Fade in only once grid set up and image has loaded
        &.grid-initialised {
            .grid-item {
            
                opacity: 1;

                &.image-loaded img {
                    opacity: 1;
                }
            }
        }
    }
}


#portfolio-modal {
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    z-index: 200;
    background: #000000e6;
    display: none;
    grid-template-rows: min-content 1fr;
    color: #fff;

    .close-button-container {

        padding: 20px;
        display: flex;
        justify-content: flex-end;

        #modal-close {
            background: none;
            padding: 8px 15px;
            color: #fff;
            cursor: pointer;
            border: 1px solid #fff;
            transition: all .3s;

            @include mixins.hover {
                border-color: variables.$pink;
                color: variables.$pink;
            }
        }
    }

    .scrollable-container {

        height: 100%;
        max-height: 100%;
        overflow-y: auto;

        .container {
            $horizontalPadding: 5vw;

            display: flex;
            flex-direction: column;
            justify-content: center;
            padding: 0 $horizontalPadding;
            min-height: 100%;
            padding-bottom: 20px;
            
            gap: 50px;
            @media only screen and (max-width: 800px) {
                gap: 30px;
            }

            .images {
                display: flex;
                flex-direction: column;
                align-items: center;
                justify-content: center;

                #selected-image {
                    // --aspect-ratio must be set in script
                    width: min(100%, calc(60vh * var(--aspect-ratio)));
                    aspect-ratio: var(--aspect-ratio);
                    border: 1px solid variables.$pink;
                    background: #000;

                    // Safari sometimes had a gap between video and border
                    // Video covered the bottom border sometimes on Chrome
                    // This solves both
                    overflow: hidden;

                    img, video {
                        width: 100%;
                        height: 100%;
                        display: block;
                        margin: auto;

                        // Above paths seems to be able to cause odd px difference between video and containing div
                        // Use cover here so video always fills it
                        object-fit: cover;
                    }
                }

                #thumbs {
                    display: flex;
                    justify-content: center;
                    height: 80px;
                    gap: 15px;
                    margin-top: 20px;
                    max-width: 100%;
                    overflow-x: auto;
                    overflow-y: hidden;

                    button {
                        background: #000;
                        padding: 0;
                        border: none;
                        cursor: pointer;
                        height: 100%;
                        overflow: hidden;

                        &.video-thumb {

                            position: relative;

                            &::before {
                                $diameter: 36px;
                                content: "";
                                display: block;
                                position: absolute;
                                width: $diameter;
                                height: $diameter;
                                top: calc(50% - ($diameter / 2));
                                left: calc(50% - ($diameter / 2));
                                background: #000000d1;
                                border-radius: 100%;
                            }

                            &::after {
                                $height: 16px;
                                $width: 10px;
                                content: "";
                                position: absolute;
                                width: 0px;
                                height: 0px;
                                top: calc(50% - ($height / 2));
                                left: calc(50% - ($width / 3));
                                border-top: calc($height / 2) solid transparent;
                                border-bottom: calc($height / 2) solid transparent;
                                border-left: $width solid #ffffffd1;
                            }

                        }

                        img {
                            height: 100%;
                            width: 100%;

                            border: 1px solid #fff;//variables.$pink;
                        }
                    }
                    
                }
            }

            .text {
                text-align: center;
                display: flex;
                flex-direction: column;
                justify-content: center;

                h1 {
                    font-size: 3em;
                    color: variables.$pink;
                    margin: 0;
                }

                #testimonial {
                    @include mixins.testimonial-quote;
                    font-size: 90%;
                }
            }

            @media only screen and (min-width: 1200px) {
                flex-direction: row;

                .images {
                    max-width: 40vw;

                    #selected-image {
                        width: min(40vw, calc(60vh * var(--aspect-ratio)));
                    }
                }

                .text {
                    max-width: 36vw;
                }
            }

            &.title-only {
                flex-direction: column;

                .images, .text {
                    max-width: none;
                }
            }
        }
    }
}

:root {
    --portfolio-scroll: 0px;
}

body.portfolio-modal-open {
    overflow: hidden;
    position: fixed;
    top: var(--portfolio-scroll);

    #portfolio-modal {
        display: grid;
    }
}

